--- a/examples/actix/Cargo.toml
+++ b/examples/actix/Cargo.toml
@@ -9,6 +9,7 @@ daprs_core = { path = "../../daprs_core" }
 daprs_derive = { path = "../../daprs_derive" }
 actix-web = "^1.0"
 actix = "^0.8"
+http = "^0.1"
 uuid = { version = "^0.8", features = ["serde", "v4"] }
 serde = "^1.0"
 serde_json = "^1.0"
