--- a/examples/actix/Cargo.toml
+++ b/examples/actix/Cargo.toml
@@ -14,3 +14,5 @@ uuid = { version = "^0.8", features = ["serde", "v4"] }
 serde = "^1.0"
 serde_json = "^1.0"
 serde_derive = "^1.0"
+log = "^0.4"
+pretty_env_logger = "^0.3"
