simplified and made more flexible.. i decided i was getting to cute with it

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 /target
 **/*.rs.bk
-daprs_derive/target
-daprs_core/target
 **/*.ipr
 **/*.iws
 **/*.iml
-examples/actix/target
-examples/actix/components
+components
