--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ log = "^0.4"
 actix-web = "^1.0"
 uuid = { version = "^0.8", features = ["serde", "v4"]}
 pretty_env_logger = "^0.3"
+mime = "^0.3"
