--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ log = "^0.4"
 
 [dev-dependencies]
 actix-web = "^1.0"
+actix-service = "^0.4"
 uuid = { version = "^0.8", features = ["serde", "v4"]}
 pretty_env_logger = "^0.3"
 mime = "^0.3"
+bytes = "^0.4"
